# lain

./: .gitignore  AGENTS.md  README.md  package.json
backend/: package-lock.json  package.json  tsconfig.json
docs/: agent-prompts.md
lain-agent/: .env.example  README.md  pyproject.toml
lain-agent/app/: config.py  main.py
lain-agent/app/agent/: service.py
lain-agent/app/agent/prompts/: scene_create.txt  scene_patch.txt  scene_query.txt  system.txt
lain-agent/app/agent/tools/: add_asset.py  search_assets.py  upsert_babylon_code.py
lain-agent/app/core/: context.py  operations.py  pipeline.py
lain-agent/app/dsl/: patch.py  schema.py  validators.py
lain-agent/app/hooks/: base.py  logging.py
lain-agent/app/llm/: base.py  openrouter.py  registry.py
lain-agent/app/models/: agent_response.py  operations.py  scene_context.py
lain-agent/app/routes/: runs.py  scenes.py
lain-agent/app/storage/: scene_store.py
lain-agent/app/tools/: asset_attach.py  asset_search.py  base.py  registry.py  scene_create.py  scene_patch.py  scene_query.py  validate.py
lain-agent/tests/: helpers.py  test_dsl_patch.py  test_dsl_schema.py  test_pipeline.py  test_runs_route.py  test_scene_context.py  test_scene_routes.py  test_tool_registry.py  test_tools.py
lain-app/: .env.example  AGENTS.md  app.config.ts  app.json  eas.json  jest.config.js  jest.setup.ts  package-lock.json  package.json  workbox-config.js
lain-scene/: index.html  main.js  mode-switcher.css  mode-switcher.js  package-lock.json  package.json  playwright.config.js  slasher.html  slasher.js  styles.css
(+122 files in other folders)
