[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lain-agent"
version = "0.1.0"
description = "FastAPI + PydanticAI scene agent for the lain monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "jsonpatch>=1.33,<2",
  "openai>=1.50,<3",
  "pydantic-settings>=2.11,<3",
  "python-dotenv>=1.1,<2",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
